fix: animation overflow

--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -36,10 +36,10 @@ $duration :1s;
         transform: translateY(0);
     }
     33%{
-        transform: translateY(-2rem);
+        transform: translateY(-30%);
     }
     66%{
-        transform: translateY(1rem);
+        transform: translateY(15%);
     }
     100%{
         transform: translateY(0);
